<resources>
    <string name="app_name">Comm_board_App</string>
    <string name="welcome_text">Welcome to our Community!</string>
    <string name="signin_button">Sign In</string>
    <string name="signuppreview">No Account? Please signup </string>
    <string name="signuplink"> Here</string>
    <string name="username">Username</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="rectback">TODO</string>
    <string name="signup_name">SignUp</string>
    <string name="email">Email</string>
    <string name="cpass">Password</string>
    <string name="reconfirmpass">Reconfirm your password</string>
    <string name="confirmuser">Username</string>
    <string name="backtolog">Already have a login? Sign in </string>
    <string name="SignuoTitle">Lets get you signed up</string>
    <string name="create_account">Create Account</string>
    <string name="Delete_text">Are you sure you want to delete your Account?</string>
    <string name="D_No">No</string>
    <string name="D_yes">Yes</string>
    <string name="D_reason">Reason why you are leaving?(Optional)</string>
    <string name="emabutton">Edit MY Account</string>
    <string name="accounttitle">Account Information:</string>
    <string name="displayuser">Username:</string>
    <string name="displayemail">Email:</string>
    <string name="biotitle">Your Bio: </string>
    <string name="biotext">Tell us about yourself</string>
    <string name="tempuser">Disusnamhere</string>
    <string name="tempemail">Disemahere</string>
    <string name="tempbio">Disusnamhere</string>
    <string name="eacctitle">Edit Account Info: </string>
    <string name="nemail">New email</string>
    <string name="cusername">Create Username</string>
    <string name="cpassword">Create Password</string>
    <string name="saveP">Save Profile</string>
    <string name="deletebut">Delete Account</string>
</resources>
