<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn=".Accountpage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="593dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/rectback"
        android:src="@drawable/rounded_boarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="76dp"
        android:text="@string/emabutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accounttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:text="@string/accounttitle"
        android:textColor="#424242"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/displayuser"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/displayemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:text="@string/displayemail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/userdisplayer"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/tempuser"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/tempemail"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="308dp"
        android:layout_height="191dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="232dp"
        android:autofillHints=""
        android:background="@drawable/rounded_boarder"
        android:ems="10"
        android:hint="@string/biotext"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/biotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="148dp"
        android:text="@string/biotitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
