<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="478dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/rect_boarder"
        android:contentDescription="@string/rectback"
        android:src="@drawable/rounded_boarder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="356dp"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/backtolog"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/C_user"
        android:layout_width="216dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rect_boarder"
        android:hint="@string/email"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/C_email"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/rect_boarder"
        android:hint="@string/confirmuser"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/C_pass"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/rect_boarder"
        android:hint="@string/Cpassword"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/C_pass2x"
        android:layout_width="212dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/rect_boarder"
        android:hint="@string/reconfirmpass"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/SIgnuptext"
        android:layout_width="228dp"
        android:layout_height="78dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="28dp"
        android:text="@string/SignuoTitle"
        android:textAlignment="center"
        android:textColor="#424242"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/retlog"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signuplink"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>
