<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editaccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="353dp"
        android:layout_height="623dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rect_boarder"
        android:contentDescription="@string/rectback"
        android:src="@drawable/rounded_boarder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUsname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="60dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/cusername"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/Eaccountname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="108dp"
        android:text="@string/eacctitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="156dp"
        android:text="Username:"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/cpasstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="112dp"
        android:text="New Password Confirm:"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/passtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="148dp"
        android:text="New Password"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/biotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="148dp"
        android:text="@string/biotitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/dprofile"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="32dp"
        android:text="@string/deletebut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/nemail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/emailtitle" />

    <EditText
        android:id="@+id/editNpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="56dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/cpassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/sprofile"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="84dp"
        android:text="@string/saveP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/emailtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="160dp"
        android:text="Email:"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/confirmNpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="52dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/Cpassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="252dp"
        android:layout_height="139dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="356dp"
        android:autofillHints=""
        android:background="@drawable/rounded_boarder"
        android:ems="10"
        android:hint="@string/biotext"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>
