<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="?attr/actionBarSize"
    android:textAlignment="center"
    tools:showIn=".activity_delete_account" >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backdrop"
        android:layout_width="414dp"
        android:layout_height="650dp"
        android:paddingTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".DeleteAccountActivity"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/deleteAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_text"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/reasonEditText"
            android:layout_width="320dp"
            android:layout_height="163dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/D_reason"
            android:background="@drawable/rounded_boarder"
            android:hint="@string/D_reason"
            android:inputType="text"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteAccountTextView" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/D_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/noButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reasonEditText"
            app:layout_constraintVertical_bias="0.254" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/D_No"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/yesButton"
            app:layout_constraintTop_toBottomOf="@id/reasonEditText"
            app:layout_constraintVertical_bias="0.254" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="183dp"
            android:layout_height="163dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="108dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logotemp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
